--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.0"
+    "grunt": "~0.4.0",
+    "html-minifier": "~0.5"
   },
   "peerDependencies": {
     "grunt": "~0.4.0"
