--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "html-minifier": "~0.6.0"
+    "html-minifier": "~0.6.0",
+    "jade": "^1.3.1"
   }
 }
