--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt": "~0.4.0",
     "grunt-conventional-changelog": "~1.0.0",
-    "load-grunt-tasks": "~0.2.0",
-    "jade": "^1.3.1"
+    "load-grunt-tasks": "~0.2.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.0"
