--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-html2js",
   "description": "Compiles AngularJS templates to JavaScript",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "homepage": "https://github.com/rquadling/grunt-html2js",
   "author": {
     "name": "Karl Goldstein",
@@ -20,12 +20,7 @@
   "bugs": {
     "url": "https://github.com/rquadling/grunt-html2js/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/rquadling/grunt-html2js/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "SEE LICENSE IN LICENSE-MIT",
   "main": "Gruntfile.js",
   "engines": {
     "node": ">= 0.8.0"
@@ -39,13 +34,13 @@
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt-conventional-changelog": "~1.0.0",
+    "grunt-coveralls": "^1.0.1",
     "load-grunt-tasks": "~0.2.0"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
   },
   "optionalDependencies": {
-    "jade": "^1.3.1",
     "pug": "^2.0.0-beta6"
   },
   "keywords": [
