--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: node_js
 sudo: false
 node_js:
-  - "4.1"
-  - "4.0"
+  - 4
+  - 5
+  - 6
+  - 7
+  - 8
+  - 9
+  - 10
+  - 11
 install:
   - npm install
 before_script:
   - npm install grunt-cli istanbul
 script:
-  - istanbul cover grunt test
-  - grunt coveralls
+  - ./node_modules/.bin/istanbul cover grunt test
+  - ./node_modules/.bin/grunt coveralls
