--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "^1.0.4",
+    "grunt": "^1.3.0",
     "grunt-contrib-clean": "^2",
-    "grunt-contrib-jshint": "^2",
+    "grunt-contrib-jshint": "^3",
     "grunt-contrib-nodeunit": "^2",
-    "grunt-conventional-changelog": "^6",
     "grunt-coveralls": "^2",
-    "load-grunt-tasks": "^4"
+    "load-grunt-tasks": "^5"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
@@ -47,7 +46,9 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "chokidar": "^2",
-    "html-minifier": "^3"
+    "chokidar": "^3",
+    "grunt-cli": "^1.3.2",
+    "html-minifier": "^4",
+    "istanbul": "^0.4.5"
   }
 }
