--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
   "dependencies": {
     "chokidar": "^3",
     "grunt-cli": "^1.3.2",
-    "html-minifier": "^4",
-    "istanbul": "^0.4.5"
+    "html-minifier": "^4"
   }
 }
