--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   },
   "devDependencies": {
     "grunt": "^1.5.3",
-    "grunt-contrib-clean": "^2",
+    "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-nodeunit": "^4",
     "grunt-coveralls": "^2",
-    "load-grunt-tasks": "^5"
+    "load-grunt-tasks": "^5",
+    "minimist": "^1.2.7"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
@@ -48,6 +49,7 @@
   "dependencies": {
     "chokidar": "^3.5.3",
     "grunt-cli": "^1.3.2",
-    "html-minifier": "^4"
+    "html-minifier": "^4",
+    "minimist": "^1.2.7"
   }
 }
